// ============================================================================
// CDC (Change Data Capture) Dependency Injection Module
// ============================================================================
// 
// @file CDCModule.kt
// @version 1.0.0
// @author Unhinged Team
// @date 2025-01-04
// @description Koin DI module for CDC service components
// 
// This module provides:
// - CDC service client for event publishing
// - Event streaming configuration
// - Kafka integration for event transport
// - Event serialization and deserialization
// ============================================================================

package com.unhinged.di

import org.koin.dsl.module
import org.slf4j.LoggerFactory
import unhinged.cdc.*
import io.grpc.ManagedChannelBuilder
import kotlinx.coroutines.Dispatchers
import kotlinx.coroutines.withContext

/**
 * CDC service dependency injection module
 * 
 * Provides CDC service client and event streaming components
 */
val cdcModule = module {
    
    /**
     * CDC service gRPC client for event publishing
     */
    single<CDCServiceGrpcKt.CDCServiceCoroutineStub> {
        val logger = LoggerFactory.getLogger("CDCModule")
        logger.info("Initializing CDC service client")
        
        // For now, create a simple stub that doesn't actually connect
        // TODO: Replace with actual gRPC client configuration
        SimpleCDCServiceStub()
    }
}

/**
 * Simple CDC service stub for development
 * This allows the application to start without a real CDC service
 */
class SimpleCDCServiceStub : CDCServiceGrpcKt.CDCServiceCoroutineStub(
    io.grpc.ManagedChannelBuilder.forAddress("localhost", 9091).usePlaintext().build()
) {
    
    private val logger = LoggerFactory.getLogger(SimpleCDCServiceStub::class.java)
    
    override suspend fun publishEvent(request: PublishEventRequest): PublishEventResponse {
        return withContext(Dispatchers.IO) {
            logger.debug("Publishing event: ${request.event.eventType} (stub implementation)")
            
            // Simple stub response
            PublishEventResponse.newBuilder()
                .setSuccess(true)
                .setMessage("Event published successfully (stub)")
                .setEventId(request.event.eventId)
                .setSequenceNumber(System.currentTimeMillis())
                .setPublishedAt(
                    com.google.protobuf.Timestamp.newBuilder()
                        .setSeconds(System.currentTimeMillis() / 1000)
                        .build()
                )
                .build()
        }
    }
    
    override suspend fun publishEvents(request: PublishEventsRequest): PublishEventsResponse {
        return withContext(Dispatchers.IO) {
            logger.debug("Publishing ${request.eventsCount} events (stub implementation)")
            
            val results = request.eventsList.map { event ->
                PublishEventResult.newBuilder()
                    .setEventId(event.eventId)
                    .setSuccess(true)
                    .setSequenceNumber(System.currentTimeMillis())
                    .build()
            }
            
            PublishEventsResponse.newBuilder()
                .setSuccess(true)
                .setMessage("${request.eventsCount} events published successfully (stub)")
                .addAllResults(results)
                .setSuccessfulCount(request.eventsCount)
                .setFailedCount(0)
                .build()
        }
    }
}
